fixed to incluede glade files

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,12 +1,12 @@
 include README
 include setup.py
-include src/controllers/__init__.py
-include src/controllers/controller.py
-include src/db/__init__.py
-include src/db/db_manager.py
-include src/models/Models.py
-include src/models/__init__.py
-include src/views/__init__.py
-include src/views/client.py
-include src/views/interfaces/*
-include src/views/main.py
+include ordenley/controllers/__init__.py
+include ordenley/controllers/controller.py
+include ordenley/db/__init__.py
+include ordenley/db/db_manager.py
+include ordenley/models/Models.py
+include ordenley/models/__init__.py
+include ordenley/views/__init__.py
+include ordenley/views/client.py
+include ordenley/views/interfaces/*
+include ordenley/views/main.py
